# ai-thinking-journal

./: .gitignore  AGENTS.md  HANDOFF.md  INVESTIGATION.md  README.md  STATUS.md  ai-thinking-journal-product-spec.md  pyproject.toml
ai-journal/daily/: 2026-05-01.md  2026-05-03.md  2026-05-05.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-14.md  2026-05-17.md
ai-journal/posters/: 2026-05-14-prompt.md  2026-05-17-prompt.md  2026-05-19-prompt.md  POSTER_WORKFLOW.md
ai-journal/weekly/: 2026-W18.md  2026-W19.md
launchd/: com.pohanlee.daily-thinking-summary.plist
scripts/: 01_extract.py  02_session_summarize.py  02_summarize.py  03_summarize.py  04_daily_pipeline.py  05_weekly.py  06_monthly.py  07_daily_poster.py  TASK-01-extraction-poc.md  TASK-02-summarization.md  TASK-03-automation.md  run_pipeline.sh
skills/journal-xhsposter/: SKILL.md
src/aij/: __init__.py  cli.py  config.py  date_utils.py  frontmatter.py  message_filters.py  pipeline.py  ui.py
src/aij/outputs/: base.py  email_smtp.py  lark_app.py  lark_webhook.py  markdown_file.py  registry.py  terminal.py
src/aij/prompts/: daily.txt  monthly.txt  poster.txt  weekly.txt
src/aij/sources/: base.py  claude_code.py  codex_cli.py  cursor.py  registry.py  windsurf.py
src/aij/summarizers/: anthropic_api.py  base.py  claude_cli.py  ollama.py  openai_api.py  registry.py
