[project]
name = "ai-thinking-journal"
version = "0.2.0"
description = "Automated daily thinking journal from AI coding assistant conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
keyring = ["keyring>=25.0"]
all = ["rich>=13.0", "keyring>=25.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
aij = "aij.cli:main"

[project.entry-points."aij.sources"]

[project.entry-points."aij.summarizers"]

[project.entry-points."aij.outputs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aij"]

[tool.ruff]
target-version = "py310"
line-length = 100
